# rag_lab

./: .gitignore  pyproject.toml
src/rag_lab/: main.py
src/rag_lab/api/: routers.py
src/rag_lab/api/v1/: router.py
src/rag_lab/api/v1/endpoints/: chat.py  ingestion.py
src/rag_lab/core/: config.py
src/rag_lab/schemas/: ingestion.py  rag_chat.py
src/rag_lab/services/: chat_service.py  file_storage_service.py  ingestion_service.py  rag_service.py  vector_store_service.py
tests/api/: test_ingestion_endpoint.py
tests/services/: test_ingestion_chunking.py  test_rag_service.py
